# dockerize-fastapi

./: Dockerfile  docker-compose.yaml  pyproject.toml
